add favorite list

--- a/style/practice.css
+++ b/style/practice.css
@@ -6,3 +6,8 @@
     border-radius: 10px;
     box-shadow: 10px 10px 10px;
 }
+ol{
+    color: burlywood;
+    background-color: blue;
+    width: 500px;
+}
